<resources>
    <string name="app_name">Cookbook</string>

    <string name="navigation_drawer_open">Відкрити панель навігації</string>
    <string name="navigation_drawer_close">Закрити панель навігації</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="add_name_category_recipe">Додайте назву категорії</string>
    <string name="add_name_recipe">Додайте назву рецепта</string>
    <string name="save_new_recipe" translatable="false">save</string>
    <string name="add_photo_new_recipe" translatable="false">add photo</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="btn_save_recipe">Зберегти</string>
    <string name="btn_detail_recipe">Детально</string>
    <string name="editTextComent">Залиште коментар</string>
    <string name="save" translatable="false">Save</string>
    <string name="add_description">Додайте опис кроку</string>
    <string name="content_description_add_сategory">Додане фото категорії</string>
    <string name="add_main_photo_recipe">Додайте головне фото \n рецепта</string>
    <string name="add_ingredients">назва інгридієнту</string>
    <string name="add_photo_step">Додайте фото кроку</string>
    <string name="fill_fields">Заповніть всі поля</string>
    <string name="btn_back" translatable="false">back</string>

    <string name="progress_dialog_title">Завантаження</string>
    <string name="not_online">Відсутній доступ до інтернету!</string>
    <string name="data_save">Дані збережено.</string>
    <string name="invalid_input">Щось ви робите неправильно, \n зробіть нормально!</string>
    <string name="no_category_name">Додайте ім\'я категорії!</string>
    <string name="no_ingredients">Додайте інгридієнти.</string>
    <string name="no_photo">Додайте фото!</string>
    <string name="no_description_step">Додайте опис кроку!</string>
    <string name="name_recipe_exists">Iм\'я рецепта вже існує!</string>
    <string name="no_recipe_name">Додайте ім\'я рецепта!</string>
    <string name="progress_vait">Зачекайте, будь ласка</string>
    <string name="unauthorized_user">Авторизуйтесь, будь ласка.</string>
    <string name="input_will_lost">Введені дані буде втрачено</string>
    <string name="step">Крок </string>
    <string name="no_information_available">Інформація відсутня</string>

    <string name="example_voice_recognition">Супи</string>
    <string name="rating">рейтинг: </string>

    <string name="voice_recognition_intent">Голосовий пошук…</string>

    <string name="fb_login_protocol_scheme" translatable="false">fb1224969314223075</string>

    <integer name="com_vk_sdk_AppId">5972669</integer>
    <string name="fb_app_id" translatable="false">1224969314223075</string>
    <string name="send">Надіслати</string>
    <string name="edit">Редагувати відгук</string>
    <string name="brief_description">Короткий опис</string>
    <string name="detail">Детально</string>

    <string name="deleted">Видалено</string>
    <string name="undo">Скасувати</string>
    <string name="extraction">Видалення</string>
    <string name="voice_recognition">Голосовий пошук</string>

    <string name="on_voice_alert_message">Увімкнути голосове управління?</string>
    <string name="off_voice_alert_message">Вимкнути голосове управління?</string>
    <string name="positive_button">так</string>
    <string name="negative_button">ні</string>
    <string name="info">інфо…</string>

    <string name="saved_vr">збережені рецепти</string>
    <string name="authorization_vr">авторизація</string>
    <string name="add_category_vr">додати категорію</string>
    <string name="add_recipe_vr">додати рецепт</string>
    <string name="detail_vr">детально</string>
    <string name="save_vr">зберегти</string>
    <string name="save_recipe_vr">зберегти рецепт</string>
    <string name="next_step">наступний крок</string>
    <string name="previous_step">попередній крок</string>
    <string name="step_back">крок назад</string>
    <string name="info_vr1">Для активування функції “голосове управління”, необхідно виконати рух рукою, зображений на малюнку.</string>
    <string name="info_vr2">Для управління додатком доступні такі команди: назва рецепта, назва категорії, авторизація, збережені рецепти, додати категорію, зберегти рецепт, зберегти, детально, наступний крок, попередній крок, крок назад.</string>
    <string name="unit">од.</string>
    <string name="quantity">к-сть</string>

    <string name="give_permission">Без цього дозволу функція не працюватиме! Дозволити?</string>
    <string name="error_loading">При завантаженні даних сталася помилка. Перевірте ваше підключення до мережі.</string>
    <string name="retry">Повторити спробу</string>
    <string name="no_saved_recipe">Ви ще не маєте збережених рецептів, спочатку додайте.</string>
    <string name="no_category_recipe">Ви ще не маєте рецептів цієї категорії, спочатку додайте.</string>
    <string name="no_basket_recipe">Ви ще не маєте рецептів в кошику, спочатку додайте.</string>
    <string name="not_found">По запиту нічого не знайдено.</string>

    <string name="share">Виберіть додаток</string>
    <string name="wait_for_download_picture">Будь ласка, дочекайтесь завантаження</string>
    <string name="make_rate_of_recipe">Будь ласка, оцініть рецепт!</string>
    <string name="editing_rate_of_recipe">Редагування оцінки</string>
    <string name="done">Готово</string>
    <string name="added_to_basket">Додано в кошик</string>
    <string name="recipe_saved">Рецепт збережено</string>
    <string name="already_in_basket">Вже в кошику</string>
    <string name="already_in_saved">Вже в збережених</string>
    <string name="menu_button_main">Головна</string>
    <string name="menu_button_local">Локально</string>
    <string name="menu_button_saved">Збережені</string>
    <string name="menu_button_basket">Кошик</string>
    <string name="menu_button_auth">Авторизація</string>
    <string name="menu_button_sign_in">Увійти</string>
    <string name="menu_button_sign_out">Вийти</string>

    <string name="auth_exit">Вихід</string>
    <string name="auth_sure">Ви впевнені?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="step_saved">Крок збережено</string>
    <string name="not_so_quick">Не так швидко, будь ласка!</string>

    <string name="ingredients">Інгредієнти</string>
</resources>

