<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:contentDescription="@string/content_description_add_сategory"
        ads:srcCompat="@drawable/step_image" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/photo_hint"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3.00"
            android:text="@string/add_photo_step"
            android:textColor="#000"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/categoryRecipesPhotoUrlGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/add_photo_new_recipe"
            ads:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageButton
            android:id="@+id/categoryRecipesPhotoUrlCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_photo_new_recipe"
            ads:srcCompat="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0.1"
        android:background="@color/colorPrimary"
        android:text="@string/save_new_recipe"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>