<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/photo_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17"
        />

    <TextView
        android:id="@+id/txt_category_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:layout_weight="0.5"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name_recipe"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/categoryRecipesPhotoUrlGallery"
            android:contentDescription="@string/add_photo_new_recipe" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/categoryRecipesPhotoUrl"
            android:contentDescription="@string/add_photo_new_recipe" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/save_new_recipe"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_weight="1"/>

</LinearLayout>